chore(config): 升级至 Java 17 并迁移配置文件
- 将 Dockerfile 中的基础镜像从 java:8 更新为 java:17
- 移除 application.properties 文件，新增 application.yml 配置文件
- 更新日志默认工作目录路径从 /data/spider/logs 到 ${user.dir}/spider-data
- 添加对 Java 11+ 兼容的 nashorn-core 依赖以替代原有脚本引擎
- 修改 ScriptManager 类中的导入包路径以适配新的 Nashorn 实现
- 在 pom.xml 中引入 nashorn.version 属性并配置相关依赖项